--- a/compose.yaml
+++ b/compose.yaml
@@ -9,7 +9,7 @@ x-kong-config:
 services:
   service1:
     build: 
-      context: ./'User Service'
+      context: ./User_Service
       dockerfile: Dockerfile
     ports:
       - "8002:8000"
@@ -17,7 +17,7 @@ services:
       - ./service1:/microservice1/
   service2:
     build: 
-      context: ./'Product Service'
+      context: ./Product_Service
       dockerfile: Dockerfile
     ports:
       - "8003:8000"
@@ -25,7 +25,7 @@ services:
       - ./service2:/microservice2/
   service3:
     build: 
-      context: ./'Order Service'
+      context: ./Order_Service
       dockerfile: Dockerfile
     ports:
       - "8004:8000"
@@ -33,7 +33,7 @@ services:
       - ./service3:/microservice3/
   service4:
     build: 
-      context: ./'Inventory Service'
+      context: ./Inventory_Service
       dockerfile: Dockerfile
     ports:
       - "8005:8000"
@@ -41,7 +41,7 @@ services:
       - ./service4:/microservice4/
   service5:
     build: 
-      context: ./'Notification Service'
+      context: ./Notification_Service
       dockerfile: Dockerfile
     ports:
       - "8006:8000"
@@ -49,7 +49,7 @@ services:
       - ./service5:/microservice5/
   service6:
     build: 
-      context: ./'Payment Service'
+      context: ./Payment_Service
       dockerfile: Dockerfile
     ports:
       - "8007:8000"
