chore: Update Dockerfile for microservices

--- a/Order_Service/Dockerfile
+++ b/Order_Service/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y \
     protobuf-compiler \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip instal poetry 
+RUN pip install poetry 
 
 COPY . /microservice3/
 
@@ -16,6 +16,6 @@ RUN poetry config virtualenvs.create false
 
 RUN poetry install
 
-EXPOSE 8004
+EXPOSE 8005
 
 CMD ["poetry", "run", "uvicorn", "service3.main:app", "--host", "0.0.0.0", "--reload"]
