--- a/compose.yaml
+++ b/compose.yaml
@@ -7,54 +7,6 @@ x-kong-config:
   KONG_PG_PASSWORD_FILE: /run/secrets/kong_postgres_password
 
 services:
-  service1:
-    build: 
-      context: ./User_Service
-      dockerfile: Dockerfile
-    ports:
-      - "8003:8000"
-    volumes:
-      - ./service1:/microservice1/
-  service2:
-    build: 
-      context: ./Product_Service
-      dockerfile: Dockerfile
-    ports:
-      - "8004:8000"
-    volumes:
-      - ./service2:/microservice2/
-  service3:
-    build: 
-      context: ./Order_Service
-      dockerfile: Dockerfile
-    ports:
-      - "8005:8000"
-    volumes:
-      - ./service3:/microservice3/
-  service4:
-    build: 
-      context: ./Inventory_Service
-      dockerfile: Dockerfile
-    ports:
-      - "8006:8000"
-    volumes:
-      - ./service4:/microservice4/
-  service5:
-    build: 
-      context: ./Notification_Service
-      dockerfile: Dockerfile
-    ports:
-      - "8007:8000"
-    volumes:
-      - ./service5:/microservice5/
-  service6:
-    build: 
-      context: ./Payment_Service
-      dockerfile: Dockerfile
-    ports:
-      - "8008:8000"
-    volumes:
-      - ./service6:/microservice6/
   kong-migrations:
     image: "${KONG_DOCKER_TAG:-kong:latest}"
     command: kong migrations bootstrap
@@ -149,6 +101,139 @@ services:
     tty: true
     volumes:
       - kong_data:/var/lib/postgresql/data
+
+  service1:
+    build: 
+      context: ./User_Service
+      dockerfile: Dockerfile
+    ports:
+      - "8003:8085"
+    volumes:
+      - ./service1:/microservice1/
+  
+  service2:
+    build: 
+      context: ./Product_Service
+      dockerfile: Dockerfile
+    ports:
+      - "8004:8086"
+    volumes:
+      - ./service2:/microservice2/
+  
+  service3:
+    build: 
+      context: ./Order_Service
+      dockerfile: Dockerfile
+    ports:
+      - "8005:8087"
+    volumes:
+      - ./service3:/microservice3/
+  
+  service4:
+    build: 
+      context: ./Inventory_Service
+      dockerfile: Dockerfile
+    ports:
+      - "8006:8088"
+    volumes:
+      - ./service4:/microservice4/
+  
+  service5:
+    build: 
+      context: ./Notification_Service
+      dockerfile: Dockerfile
+    ports:
+      - "8007:8089"
+    volumes:
+      - ./service5:/microservice5/
+  
+  service6:
+    build: 
+      context: ./Payment_Service
+      dockerfile: Dockerfile
+    ports:
+      - "8008:8090"
+    volumes:
+      - ./service6:/microservice6/
+  
+  postgres_db:
+    image: postgres:latest # Use the official PostgreSQL image
+    restart: always
+    container_name: PostgresCont
+    environment:
+      - POSTGRES_USER=ziakhan
+      - POSTGRES_PASSWORD=my_password
+      - POSTGRES_DB=mydatabase
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_db:/var/lib/postgresql/data
+
+  broker:
+    image: apache/kafka:3.7.0
+    hostname: broker
+    container_name: broker
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_NODE_ID: 1
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT_HOST://localhost:9092,PLAINTEXT://broker:19092"
+      KAFKA_PROCESS_ROLES: "broker,controller"
+      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@broker:29093"
+      KAFKA_LISTENERS: "CONTROLLER://:29093,PLAINTEXT_HOST://:9092,PLAINTEXT://:19092"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
+      KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
+      CLUSTER_ID: "4L6g3nShT-eMCtK--X86sw"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_LOG_DIRS: "/tmp/kraft-combined-logs"
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui
+    container_name: kafka-ui
+    ports:
+      - "8080:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: "Local Kafka Cluster"
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: "broker:19092"
+      DYNAMIC_CONFIG_ENABLED: "true"
+    depends_on:
+      - broker
+
+  specs-combiner-server:
+    build:
+      context: ./specs-combiner
+      dockerfile: Dockerfile
+    volumes:
+      - ./specs-combiner:/code # Sync local development directory with the container
+    depends_on:
+      - kong
+      - service1
+      - service2
+      - service3
+      - service4
+      - service5
+      - service6
+    ports:
+      - "9000:9000" # Expose container port 9000 to host port 9000
+
+  pgadmin:
+    image: dpage/pgadmin4:8.6
+    restart: always
+    container_name: PgAdmin4Cont
+    ports:
+      - "8010:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=kong@gmail.com
+      - PGADMIN_DEFAULT_PASSWORD=kong@gmail.com
+    volumes:
+      - pgadmin:/var/lib/pgadmin
+    depends_on:
+      - postgres_db
+      - db
 
 secrets:
   kong_postgres_password:
