--- a/User_Service/pyproject.toml
+++ b/User_Service/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+fastapi = "^0.111.0"
+sqlmodel = "^0.0.19"
+uvicorn = {extras = ["standard"], version = "^0.30.1"}
 
 
 [build-system]
