--- a/Product_Service/Dockerfile
+++ b/Product_Service/Dockerfile
@@ -18,4 +18,4 @@ RUN poetry install
 
 EXPOSE 8004
 
-CMD ["poetry", "run", "uvicorn", "service2.main:app", "--host", "0.0.0.0", "--reload"]
+CMD ["poetry", "run", "uvicorn", "service2.main:app", "--host", "0.0.0.0", "--port","8004", "--reload"]
