--- a/specs-combiner/Dockerfile
+++ b/specs-combiner/Dockerfile
@@ -17,4 +17,4 @@ RUN poetry install
 
 EXPOSE 9000
 
-CMD ["poetry", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--reload"]
+CMD ["poetry", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "9000", "--reload"]
