--- a/User_Service/pyproject.toml
+++ b/User_Service/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.11"
 fastapi = "^0.111.0"
 sqlmodel = "^0.0.19"
 uvicorn = {extras = ["standard"], version = "^0.30.1"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+psycopg2 = "^2.9.9"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 
 
 [build-system]
