Created Product Service

--- a/Product_Service/pyproject.toml
+++ b/Product_Service/pyproject.toml
@@ -1,9 +1,11 @@
 [tool.poetry]
 name = "product service"
 version = "0.1.0"
-description = ""
+description = "Manages product catalog, including CRUD operations for products."
 authors = ["Syed Kamil Zafar <kamilzafar54@gmail.com>"]
 readme = "README.md"
+package-mode = false
+
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -11,6 +13,7 @@ fastapi = "^0.111.0"
 uvicorn = {extras = ["standard"], version = "^0.30.1"}
 sqlmodel = "^0.0.19"
 aiokafka = "^0.10.0"
+psycopg2 = "^2.9.9"
 
 
 [build-system]
