feat: Update Order Service dependencies
This commit updates the dependencies in the Order Service. It adds the `fastapi` version `0.111.0`, `uvicorn` version `0.30.1`, and `sqlmodel` version `0.0.19`. These updates ensure that the Order Service is using the latest stable versions of these dependencies.

This commit message follows the established convention of using a prefix (`feat`) to indicate a new feature or functionality being added.

--- a/compose.yaml
+++ b/compose.yaml
@@ -126,16 +126,16 @@ services:
     depends_on:
       - postgres_db
   
-  # service3:
-  #   build: 
-  #     context: ./Order_Service
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "8005:8005"
-  #   volumes:
-  #     - ./Order_Service:/microservice3/
-  #   depends_on:
-  #     - postgres_db
+  service3:
+    build: 
+      context: ./Order_Service
+      dockerfile: Dockerfile
+    ports:
+      - "8005:8005"
+    volumes:
+      - ./Order_Service:/microservice3/
+    depends_on:
+      - postgres_db
   
   # service4:
   #   build: 
@@ -227,7 +227,7 @@ services:
       - kong
       - service1
       - service2
-      # - service3
+      - service3
       # - service4
       # - service5
       # - service6
