--- a/Payment_Service/pyproject.toml
+++ b/Payment_Service/pyproject.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+fastapi = "^0.111.0"
+uvicorn = {extras = ["standard"], version = "^0.30.1"}
+sqlmodel = "^0.0.19"
+confluent-kafka = "^2.4.0"
 
 
 [build-system]
