--- a/Product_Service/pyproject.toml
+++ b/Product_Service/pyproject.toml
@@ -14,6 +14,7 @@ uvicorn = {extras = ["standard"], version = "^0.30.1"}
 sqlmodel = "^0.0.19"
 aiokafka = "^0.10.0"
 psycopg2 = "^2.9.9"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 
 
 [build-system]
