--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ version: '3.9'
 
 x-kong-config:
   &kong-env
-  KONG_DATABASE: ${KONG_DATABASE:-postgres}
+  KONG_DATABASE: ${KONG_DATABASE:-off}
   KONG_PG_DATABASE: ${KONG_PG_DATABASE:-kong}
   KONG_PG_HOST: db
   KONG_PG_USER: ${KONG_PG_USER:-kong}
@@ -46,7 +46,7 @@ services:
       KONG_PROXY_ACCESS_LOG: /dev/stdout
       KONG_PROXY_ERROR_LOG: /dev/stderr
       KONG_PREFIX: ${KONG_PREFIX:-/var/run/kong}
-      KONG_DECLARATIVE_CONFIG: "/opt/kong/kong.yaml"
+      KONG_DECLARATIVE_CONFIG: "/opt/kong/kong.yml"
     secrets:
       - kong_postgres_password
     ports:
@@ -70,9 +70,9 @@ services:
     restart: on-failure:5
     read_only: true
     volumes:
+      - ./config:/opt/kong/
       - kong_prefix_vol:${KONG_PREFIX:-/var/run/kong}
       - kong_tmp_vol:/tmp
-      # - ./config:/opt/kong
     security_opt:
       - no-new-privileges
 
