--- a/User_Service/pyproject.toml
+++ b/User_Service/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = {extras = ["standard"], version = "^0.30.1"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 psycopg2 = "^2.9.9"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+requests = "^2.32.3"
 
 
 [build-system]
