refactor: Update Kong configuration to allow DELETE method for /auth route

--- a/config/kong.yml
+++ b/config/kong.yml
@@ -7,7 +7,7 @@ services:
     routes:
       - name: user-service-route
         paths:
-          - /user
+          - /auth
         methods:
           - GET
           - POST
