refactor: Add notification-service route in Kong configuration
This code change adds a new route for the notification-service in the Kong configuration file (`kong.yml`). The route is configured to handle GET, POST, PATCH, and DELETE methods for the `/notification` path. This update enables the Kong gateway to properly route requests to the notification-service.

This commit message follows the established convention of using a prefix (`refactor`) to indicate a code refactoring or improvement.

--- a/config/kong.yml
+++ b/config/kong.yml
@@ -65,6 +65,20 @@ services:
         # plugins:
         #   - name: jwt
 
+  - name: notification-service
+    url: http://host.docker.internal:8007
+    routes:
+      - name: notification-service-route
+        paths:
+          - /notification
+        methods:
+          - GET
+          - POST
+          - PATCH
+          - DELETE
+        # plugins:
+        #   - name: jwt
+
   - name: payment-service
     url: http://host.docker.internal:8008
     routes:
