order service updated

--- a/Order_Service/.env
+++ b/Order_Service/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://kamil:my_password@PostgresCont:5432/mydatabase"
+DATABASE_URL="postgresql://neondb_owner:zoSdt6DfXhb1@ep-red-limit-a5mryadq.us-east-2.aws.neon.tech/test-db?sslmode=require"
