--- a/Order_Service/pyproject.toml
+++ b/Order_Service/pyproject.toml
@@ -10,7 +10,11 @@ python = "^3.11"
 fastapi = "^0.111.0"
 uvicorn = {extras = ["standard"], version = "^0.30.1"}
 sqlmodel = "^0.0.19"
-
+psycopg2 = "^2.9.9"
+python-dotenv = "^1.0.1"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+python-multipart = "^0.0.9"
 
 [build-system]
 requires = ["poetry-core"]
