refactor: add email notfication service
This code change updates the dependencies for the Notification Service in the pyproject.toml file. The aiokafka and protobuf packages are added with their respective versions. These updates enhance the functionality and performance of the Notification Service.

Commit message follows the established convention of using a prefix (`refactor`) to indicate a code refactoring or improvement.

--- a/Notification_Service/pyproject.toml
+++ b/Notification_Service/pyproject.toml
@@ -11,6 +11,9 @@ python = "^3.11"
 fastapi = "^0.111.0"
 sqlmodel = "^0.0.19"
 uvicorn = {extras = ["standard"], version = "^0.30.1"}
+aiokafka = "^0.10.0"
+protobuf = "^5.27.2"
+fastapi-mail = "^1.4.1"
 
 [build-system]
 requires = ["poetry-core"]
