--- a/User_Service/pyproject.toml
+++ b/User_Service/pyproject.toml
@@ -14,6 +14,8 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 psycopg2 = "^2.9.9"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 requests = "^2.32.3"
+aiokafka = "^0.10.0"
+protobuf = "^5.27.2"
 
 
 [build-system]
