--- a/Notification_Service/.env
+++ b/Notification_Service/.env
@@ -1,7 +1,7 @@
 DATABASE_URL="postgresql://kamil:my_password@PostgresCont:5432/mydatabase"
 KAFKA_CONSUMER_TOPIC = "user_service"
 KAFKA_GROUP_ID = "user_service_group"
-KAFKA_BROKER_URL = "broker:19092"
+KAFKA_BOOTSTRAP_SERVER = "broker:19092"
 smtp_server = "smtp.gmail.com"
 smtp_port = 587
 smtp_email = "kamilzafar54@gmail.com"
