--- a/Notification_Service/pyproject.toml
+++ b/Notification_Service/pyproject.toml
@@ -14,6 +14,7 @@ uvicorn = {extras = ["standard"], version = "^0.30.1"}
 aiokafka = "^0.10.0"
 protobuf = "^5.27.2"
 fastapi-mail = "^1.4.1"
+psycopg2 = "^2.9.9"
 
 [build-system]
 requires = ["poetry-core"]
