refactor: Added Email Notification for Order Service

--- a/Notification_Service/.env
+++ b/Notification_Service/.env
@@ -2,7 +2,10 @@ DATABASE_URL="postgresql://kamil:my_password@PostgresCont:5432/mydatabase"
 KAFKA_CONSUMER_TOPIC = "user_service"
 KAFKA_GROUP_ID = "user_service_group"
 KAFKA_BOOTSTRAP_SERVER = "broker:19092"
+KAFKA_ORDER_TOPIC = "order_service"
+KAFKA_ORDER_GROUP_ID = "order_service_group"
 smtp_server = "smtp.gmail.com"
 smtp_port = 587
 smtp_email = "kamilzafar54@gmail.com"
 SMTP_PASSWORD = "fzlzyhswixyrtpmz"
+smtp_username = "Kamil Zafar"
