--- a/Order_Service/pyproject.toml
+++ b/Order_Service/pyproject.toml
@@ -16,6 +16,8 @@ python-dotenv = "^1.0.1"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.9"
+aiokafka = "^0.10.0"
+protobuf = "^5.27.2"
 
 [build-system]
 requires = ["poetry-core"]
