--- a/compose.yaml
+++ b/compose.yaml
@@ -229,8 +229,8 @@ services:
       - service1
       - service2
       - service3
-      # - service4
-      # - service5
+      - service4
+      - service5
       - service6
     ports:
       - "9000:9000" # Expose container port 9000 to host port 9000
