--- a/Product_Service/pyproject.toml
+++ b/Product_Service/pyproject.toml
@@ -15,6 +15,8 @@ sqlmodel = "^0.0.19"
 aiokafka = "^0.10.0"
 psycopg2 = "^2.9.9"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+requests = "^2.32.3"
+httpx = "^0.27.0"
 
 
 [build-system]
