--- a/compose.yaml
+++ b/compose.yaml
@@ -102,6 +102,7 @@ services:
       - kong_data:/var/lib/postgresql/data
 
   service1:
+    image: kamilzafar/user-service
     build:
       context: ./User_Service
       dockerfile: Dockerfile
@@ -114,6 +115,7 @@ services:
       - broker
 
   service2:
+    image: kamilzafar/product-service
     build:
       context: ./Product_Service
       dockerfile: Dockerfile
@@ -125,6 +127,7 @@ services:
       - postgres_db
 
   service3:
+    image: kamilzafar/order-service
     build:
       context: ./Order_Service
       dockerfile: Dockerfile
@@ -137,6 +140,7 @@ services:
       - broker
 
   service4:
+    image: kamilzafar/inventory-service
     build:
       context: ./Inventory_Service
       dockerfile: Dockerfile
@@ -148,6 +152,7 @@ services:
       - postgres_db
 
   service5:
+    image: kamilzafar/notification-service
     build: 
       context: ./Notification_Service
       dockerfile: Dockerfile
@@ -160,6 +165,7 @@ services:
       - broker
 
   service6:
+    image: kamilzafar/payment-service
     build:
       context: ./Payment_Service
       dockerfile: Dockerfile
