--- a/Order_Service/pyproject.toml
+++ b/Order_Service/pyproject.toml
@@ -18,6 +18,7 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.9"
 aiokafka = "^0.10.0"
 protobuf = "^5.27.2"
+requests = "^2.32.3"
 
 [build-system]
 requires = ["poetry-core"]
