--- a/Inventory_Service/pyproject.toml
+++ b/Inventory_Service/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^1.0.1"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.9"
+requests = "^2.32.3"
 
 
 [build-system]
