--- a/compose.yaml
+++ b/compose.yaml
@@ -105,7 +105,7 @@ services:
     image: kamilzafar/user-service
     build:
       context: ./User_Service
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     ports:
       - "8003:8003"
     volumes:
@@ -118,7 +118,7 @@ services:
     image: kamilzafar/product-service
     build:
       context: ./Product_Service
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     ports:
       - "8004:8004"
     volumes:
@@ -130,7 +130,7 @@ services:
     image: kamilzafar/order-service
     build:
       context: ./Order_Service
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     ports:
       - "8005:8005"
     volumes:
@@ -143,7 +143,7 @@ services:
     image: kamilzafar/inventory-service
     build:
       context: ./Inventory_Service
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     ports:
       - "8006:8006"
     volumes:
@@ -155,7 +155,7 @@ services:
     image: kamilzafar/notification-service
     build: 
       context: ./Notification_Service
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     ports:
       - "8007:8007"
     volumes:
@@ -168,7 +168,7 @@ services:
     image: kamilzafar/payment-service
     build:
       context: ./Payment_Service
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     ports:
       - "8008:8008"
     volumes:
@@ -227,7 +227,7 @@ services:
   specs-combiner-server:
     build:
       context: ./specs-combiner
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     volumes:
       - ./specs-combiner:/code/ # Sync local development directory with the container
     depends_on:
