--- a/User_Service/Dockerfile.prod
+++ b/User_Service/Dockerfile.prod
@@ -4,11 +4,12 @@ FROM python:3.12-slim
 # Set the working directory
 WORKDIR /microservice1
 
-# Install dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
+    build-essential \
     libpq-dev \
     protobuf-compiler \
-    && rm -rf /var/lib/apt/lists/*
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Copy only the necessary files to install dependencies
 COPY pyproject.toml poetry.lock /microservice1/
