--- a/Product_Service/Dockerfile.prod
+++ b/Product_Service/Dockerfile.prod
@@ -6,9 +6,9 @@ WORKDIR /microservice2
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
-    libpq-dev \
-    protobuf-compiler \
-    && rm -rf /var/lib/apt/lists/*
+build-essential \
+libpq-dev \
+&& apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Copy only the necessary files to install dependencies
 COPY pyproject.toml poetry.lock /microservice2/
