update folders name and debug

--- a/notification-service/Dockerfile.prod
+++ b/notification-service/Dockerfile.prod
@@ -2,16 +2,21 @@
 FROM python:3.12-slim
 
 # Set the working directory
-WORKDIR /microservice6
+WORKDIR /microservice5
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
     libpq-dev \
-    protobuf-compiler \
     && rm -rf /var/lib/apt/lists/*
 
+RUN apt-get update && apt-get install -y \
+build-essential \
+protobuf-compiler \
+libpq-dev \
+&& apt-get clean && rm -rf /var/lib/apt/lists/*
+    
 # Copy only the necessary files to install dependencies
-COPY pyproject.toml poetry.lock /microservice6/
+COPY pyproject.toml poetry.lock /microservice5/
 
 # Install poetry
 RUN pip install poetry 
@@ -23,10 +28,10 @@ RUN poetry config virtualenvs.create false
 RUN poetry install --no-dev --no-root
 
 # Copy the application code
-COPY . /microservice6/
+COPY . /microservice5/
 
 # Expose the port the application runs on
-EXPOSE 8008
+EXPOSE 8007
 
 # Define the command to run the application
-CMD ["poetry", "run", "uvicorn", "service6.main:app", "--host", "0.0.0.0", "--port", "8008"]
+CMD ["poetry", "run", "uvicorn", "service5.main:app", "--host", "0.0.0.0", "--port", "8007"]
