--- a/inventory-service/Dockerfile.prod
+++ b/inventory-service/Dockerfile.prod
@@ -2,16 +2,17 @@
 FROM python:3.12-slim
 
 # Set the working directory
-WORKDIR /microservice3
+WORKDIR /microservice4
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
-    libpq-dev \
-    protobuf-compiler \
-    && rm -rf /var/lib/apt/lists/*
+build-essential \
+libpq-dev \
+protobuf-compiler \
+&& apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Copy only the necessary files to install dependencies
-COPY pyproject.toml poetry.lock /microservice3/
+COPY pyproject.toml poetry.lock /microservice4/
 
 # Install poetry
 RUN pip install poetry 
@@ -23,10 +24,10 @@ RUN poetry config virtualenvs.create false
 RUN poetry install --no-dev --no-root
 
 # Copy the application code
-COPY . /microservice3/
+COPY . /microservice4/
 
 # Expose the port the application runs on
-EXPOSE 8005
+EXPOSE 8006
 
 # Define the command to run the application
-CMD ["poetry", "run", "uvicorn", "service3.main:app", "--host", "0.0.0.0", "--port", "8005"]
+CMD ["poetry", "run", "uvicorn", "service4.main:app", "--host", "0.0.0.0", "--port", "8006"]
