--- a/order-service/Dockerfile.prod
+++ b/order-service/Dockerfile.prod
@@ -2,16 +2,17 @@
 FROM python:3.12-slim
 
 # Set the working directory
-WORKDIR /microservice5
+WORKDIR /microservice3
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
-    libpq-dev \
-    protobuf-compiler \
-    && rm -rf /var/lib/apt/lists/*
+build-essential \
+protobuf-compiler \
+libpq-dev \
+&& apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Copy only the necessary files to install dependencies
-COPY pyproject.toml poetry.lock /microservice5/
+COPY pyproject.toml poetry.lock /microservice3/
 
 # Install poetry
 RUN pip install poetry 
@@ -23,10 +24,10 @@ RUN poetry config virtualenvs.create false
 RUN poetry install --no-dev --no-root
 
 # Copy the application code
-COPY . /microservice5/
+COPY . /microservice3/
 
 # Expose the port the application runs on
-EXPOSE 8007
+EXPOSE 8005
 
 # Define the command to run the application
-CMD ["poetry", "run", "uvicorn", "service5.main:app", "--host", "0.0.0.0", "--port", "8007"]
+CMD ["poetry", "run", "uvicorn", "service3.main:app", "--host", "0.0.0.0", "--port", "8005"]
