--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       # Build and push the user service Docker image
       - name: Build and push User Service Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/userservice:latest ../../user-service
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/userservice:latest ../user-service
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/userservice:latest
 
       - name: Export Product Service .env variables
