--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       # Build and push the user service Docker image
       - name: Build and push User Service Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/userservice:latest ../user-service
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/userservice:latest ./user-service
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/userservice:latest
 
       - name: Export Product Service .env variables
@@ -41,7 +41,7 @@ jobs:
       # Build and push the product service Docker image
       - name: Build and push Product Service Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/productservice:latest ../../product-service
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/productservice:latest ./product-service
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/productservice:latest
 
       - name: Export Order Service .env variables
@@ -53,7 +53,7 @@ jobs:
       # Build and push the order service Docker image
       - name: Build and push Order Service Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/orderservice:latest ../../order-service
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/orderservice:latest ./order-service
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/orderservice:latest
 
       - name: Azure Login
